update cv w/ website and eea 2025 presentation

--- a/assets/pdf/cv.tex
+++ b/assets/pdf/cv.tex
@@ -142,13 +142,12 @@
 % \end{tabular*}
 
 
-%%-- more vertical space b/w name and email
+%% 
 \begin{center}
-    \textbf{\Huge \scshape Anthony Chuo} \\ \vspace{1pt}
-    \href{mailto:tchuo9676@sdsu.edu}{\underline{tchuo9676@sdsu.edu}} $|$ 
-    \href{https://github.com/tonychuo1}{\underline{tonychuo1.github.io}}
+    \textbf{\Huge \scshape Anthony Chuo} \\ \vspace{6pt}
+    \href{mailto:tchuo9676@sdsu.edu}{\underline{tchuo9676@sdsu.edu}} 
+    $|$ \href{https://tonychuo1.github.io/}{\underline{tonychuo1.github.io}}
 \end{center}
-
 
 %-----------EDUCATION-----------
 \section{Education}
@@ -254,6 +253,7 @@
     \resumeSubHeadingListStart
     
     \item
+    Eastern Economics Association Conference, 2025; 
     Southern Economics Association Conference, 2024
     
     \resumeSubHeadingListEnd
