--- a/assets/pdf/cv.tex
+++ b/assets/pdf/cv.tex
@@ -153,10 +153,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {San Diego State University}{2025 (Expected)}
+      {University of Texas at Austin}{2025-Present}
+      {Ph.D. Economics (Expected)}{}
+
+    \resumeSubheading
+      {San Diego State University}{2023-2025}
       {M.A. Economics}{}
     \resumeSubheading
-      {Texas A\&M University}{2023}
+      {Texas A\&M University}{2019-2023}
       {B.S. Economics, \emph{Summa Cum Laude}}{}
   \resumeSubHeadingListEnd
 
@@ -165,6 +169,10 @@
 %-----------WORKING PAPERS-----------
 \section{Working Papers}
   \resumeSubHeadingListStart
+      \item ``Do Vaping Taxes Tip the Scale? The Effect
+      of E-Cigarette Taxation on Obesity'' (joint with
+      Charles Courtemanche, Tessie Krishna, Yang Liang,
+      and Joseph Sabia), \href{https://www.nber.org/papers/w33890}{\underline{link}} to NBER WP
 
       \item ``E-Cigarette Taxation and Queer Youth" 
       (joint with Chad Cotti, Charles Courtemanche,
@@ -173,20 +181,20 @@
 
   \resumeSubHeadingListEnd
 
-%  
+  
 %%-----------WORK IN PROGRESS-----------
 %\section{Work in Progress}
 %    \resumeSubHeadingListStart
-%
-%      \item ``Do Vaping Taxes Tip the Scale? The Effect 
-%      of E-Cigarette Taxes on Body Weight" 
-%      (joint with Charles Courtemanche,
-%      Tessie Krishna, Yang Liang, and Joseph Sabia)
-%
+%      \item 
 %    \resumeSubHeadingListEnd
-%-----------HONORS,SCHOLARSHIPS, AND FELLOWSHIPS-----------
+
+%-----------HONORS, SCHOLARSHIPS, AND FELLOWSHIPS-----------
 \section{Honors, Scholarships, and Fellowships}
     \resumeSubHeadingListStart
+
+      \resumeSubSubheading{Madhavan 
+      Outstanding Graduate Student Award, 
+      San Diego State University}{2025}
 
       \resumeSubSubheading{Center for Health
       Economics and Policy Studies Fellowship, San Diego 
@@ -210,6 +218,28 @@
 
     \resumeSubHeadingListEnd
 
+%-----------SEMINAR AND CONFERENCE PRESENTATION-----------
+\section{Seminar and Conference Presentation}
+
+    \resumeSubHeadingListStart
+    
+    \item
+    Eastern Economics Association Conference, 2025; 
+    Southern Economics Association Conference, 2024
+    
+    \resumeSubHeadingListEnd
+
+%-----------PROFESSIONAL SERVICE-----------
+\section{Professional Service}
+
+\resumeSubHeadingListStart
+
+\item 
+Referee for: \emph{Economics and Human Biology}
+
+\resumeSubHeadingListEnd
+
+
 %-----------AWARDED FUNDS-----------
 \section{Awarded Funds}
     \resumeSubHeadingListStart
@@ -223,6 +253,7 @@
     \resumeSubHeadingListEnd
 
 %-----------COMMITTEES-----------
+% could remove this one?
 \section{Committees}
     \resumeSubHeadingListStart
 
@@ -247,91 +278,8 @@
 
     \resumeSubHeadingListEnd
 
-%-----------SEMINAR AND CONFERENCE PRESENTATION-----------
-\section{Seminar and Conference Presentation}
-
-    \resumeSubHeadingListStart
-    
-    \item
-    Eastern Economics Association Conference, 2025; 
-    Southern Economics Association Conference, 2024
-    
-    \resumeSubHeadingListEnd
-
-%-----------SKILLS-----------
-
-%%-----------EXPERIENCE-----------
-%\section{Experience}
-%  \resumeSubHeadingListStart
 %
-%    \resumeSubheading
-%      {Undergraduate Research Assistant}{June 2020 -- Present}
-%      {Texas A\&M University}{College Station, TX}
-%      \resumeItemListStart
-%        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-%        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-%        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
-%      \resumeItemListEnd
-%      
-%% -----------Multiple Positions Heading-----------
-%%    \resumeSubSubheading
-%%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%%     \resumeItemListStart
-%%        \resumeItem{Apache Beam}
-%%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%%     \resumeItemListEnd
-%%    \resumeSubHeadingListEnd
-%%-------------------------------------------
-%
-%    \resumeSubheading
-%      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-%      {Southwestern University}{Georgetown, TX}
-%      \resumeItemListStart
-%        \resumeItem{Communicate with managers to set up campus computers used on campus}
-%        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-%        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-%    \resumeItemListEnd
-%
-%    \resumeSubheading
-%      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-%      {Southwestern University}{Georgetown, TX}
-%      \resumeItemListStart
-%        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-%        \resumeItem{Developed a game in Java to test the generated dungeons}
-%        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-%        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-%        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-%        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-%      \resumeItemListEnd
-%
-%  \resumeSubHeadingListEnd
-%
-%
-%%-----------PROJECTS-----------
-%\section{Projects}
-%    \resumeSubHeadingListStart
-%      \resumeProjectHeading
-%          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-%          \resumeItemListStart
-%            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-%            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-%            \resumeItem{Visualized GitHub data to show collaboration}
-%            \resumeItem{Used Celery and Redis for asynchronous tasks}
-%          \resumeItemListEnd
-%      \resumeProjectHeading
-%          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-%          \resumeItemListStart
-%            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-%            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-%            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-%            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-%          \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
+%-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
 
  \begin{itemize}[leftmargin=0.15in, label={}]
@@ -339,17 +287,5 @@
      Software{: Excel, Python, Stata, Git, GitHub, \LaTeX} \\
     }
  \end{itemize}
-
-%-------------------------------------------
-
- %\begin{itemize}[leftmargin=0.15in, label={}]
- %   \small{\item{
- %    \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
- %    \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
- %    \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
- %    \textbf{Libraries}{: pandas, NumPy, Matplotlib}
- %   }}
- %\end{itemize}
-
 
 \end{document}
