--- a/assets/pdf/cv.tex
+++ b/assets/pdf/cv.tex
@@ -132,17 +132,9 @@
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
-
-%% 
 \begin{center}
     \textbf{\Huge \scshape Anthony Chuo} \\ \vspace{6pt}
     \href{mailto:tchuo9676@sdsu.edu}{\underline{tchuo9676@sdsu.edu}} 
@@ -159,28 +151,25 @@
     \resumeSubheading
       {San Diego State University}{2023-2025}
       {M.A. Economics}{}
+
     \resumeSubheading
       {Texas A\&M University}{2019-2023}
       {B.S. Economics, \emph{Summa Cum Laude}}{}
   \resumeSubHeadingListEnd
 
-
-
 %-----------WORKING PAPERS-----------
 \section{Working Papers}
   \resumeSubHeadingListStart
       \item ``Do Vaping Taxes Tip the Scale? The Effect
-      of E-Cigarette Taxation on Obesity'' (joint with
+      of E-Cigarette Taxation on Obesity,'' with
       Charles Courtemanche, Tessie Krishna, Yang Liang,
-      and Joseph Sabia), \href{https://www.nber.org/papers/w33890}{\underline{link}} to NBER WP
+      and Joseph Sabia (\href{https://www.nber.org/papers/w33890}{\underline{link}} to NBER WP)
 
-      \item ``E-Cigarette Taxation and Queer Youth" 
-      (joint with Chad Cotti, Charles Courtemanche,
+      \item ``E-Cigarette Taxation and Queer Youth," 
+      with Chad Cotti, Charles Courtemanche,
       Johanna Catherine Maclean, Erik Nesson, and 
-      Joseph Sabia), \href{https://www.nber.org/papers/w33326}{\underline{link}} to NBER WP
-
+      Joseph Sabia (\href{https://www.nber.org/papers/w33326}{\underline{link}} to NBER WP)
   \resumeSubHeadingListEnd
-
   
 %%-----------WORK IN PROGRESS-----------
 %\section{Work in Progress}
@@ -191,7 +180,6 @@
 %-----------HONORS, SCHOLARSHIPS, AND FELLOWSHIPS-----------
 \section{Honors, Scholarships, and Fellowships}
     \resumeSubHeadingListStart
-
       \resumeSubSubheading{Madhavan 
       Outstanding Graduate Student Award, 
       San Diego State University}{2025}
@@ -215,58 +203,46 @@
       \resumeSubSubheading{Phi Beta Kappa, Texas A\&M University}{2023}
 
       \resumeSubSubheading{Dean's List, Texas A\&M University}{2019-2023}
-
     \resumeSubHeadingListEnd
 
 %-----------SEMINAR AND CONFERENCE PRESENTATION-----------
 \section{Seminar and Conference Presentation}
 
     \resumeSubHeadingListStart
-    
     \item
     Eastern Economics Association Conference, 2025; 
     Southern Economics Association Conference, 2024
-    
     \resumeSubHeadingListEnd
 
 %-----------PROFESSIONAL SERVICE-----------
 \section{Professional Service}
 
-\resumeSubHeadingListStart
-
-\item 
-Referee for: \emph{Economics and Human Biology}
-
-\resumeSubHeadingListEnd
-
+    \resumeSubHeadingListStart
+    \item 
+    Referee for: \emph{Economics and Human Biology}
+    \resumeSubHeadingListEnd
 
 %-----------AWARDED FUNDS-----------
 \section{Awarded Funds}
     \resumeSubHeadingListStart
-      
       \resumeSubSubheading{San Diego State University Student Success
       Fee, Alternate Contact -- \$63,000}{2024-2025}
 
       \resumeSubSubheading{San Diego State University Student Success
       Fee, Lead Contact -- \$26,500}{Spring 2024}
-
     \resumeSubHeadingListEnd
 
 %-----------COMMITTEES-----------
 % could remove this one?
 \section{Committees}
     \resumeSubHeadingListStart
-
       \resumeSubSubheading{San Diego State University Student Success
       Fee Review Committee}{Spring 2024}
-
     \resumeSubHeadingListEnd
-
 
 %-----------RESEARCH EXPERIENCE AND OTHER EMPLOYMENT-----------
 \section{Research Experience and Other Employment}
     \resumeSubHeadingListStart
-
       \resumeSubheading{Research Assistant at Center for 
       Health Economics and Policy Studies}{2023-2025}
       {San Diego State University}{}
@@ -275,7 +251,6 @@ Referee for: \emph{Economics and Human Biology}
       {Texas A\&M University}{}
 
       \resumeSubheading{Severance Tax Consultant Intern}{Summer 2022}{Ryan}{}
-
     \resumeSubHeadingListEnd
 
 %
@@ -284,7 +259,7 @@ Referee for: \emph{Economics and Human Biology}
 
  \begin{itemize}[leftmargin=0.15in, label={}]
     \item{
-     Software{: Excel, Python, Stata, Git, GitHub, \LaTeX} \\
+     Software{: Excel, Git, GitHub, \LaTeX, Python, Stata} \\
     }
  \end{itemize}
 
