PhD program begins, clean CV

--- a/assets/pdf/cv.tex
+++ b/assets/pdf/cv.tex
@@ -209,9 +209,9 @@
 \section{Seminar and Conference Presentation}
 
     \resumeSubHeadingListStart
-    \item
-    Eastern Economics Association Conference, 2025; 
-    Southern Economics Association Conference, 2024
+      \resumeSubSubheading{Eastern Economics Association Conference}{2025}
+
+      \resumeSubSubheading{Southern Economics Association Conference}{2024}
     \resumeSubHeadingListEnd
 
 %-----------PROFESSIONAL SERVICE-----------
@@ -222,23 +222,24 @@
     Referee for: \emph{Economics and Human Biology}
     \resumeSubHeadingListEnd
 
-%-----------AWARDED FUNDS-----------
-\section{Awarded Funds}
-    \resumeSubHeadingListStart
-      \resumeSubSubheading{San Diego State University Student Success
-      Fee, Alternate Contact -- \$63,000}{2024-2025}
-
-      \resumeSubSubheading{San Diego State University Student Success
-      Fee, Lead Contact -- \$26,500}{Spring 2024}
-    \resumeSubHeadingListEnd
-
-%-----------COMMITTEES-----------
-% could remove this one?
-\section{Committees}
-    \resumeSubHeadingListStart
-      \resumeSubSubheading{San Diego State University Student Success
-      Fee Review Committee}{Spring 2024}
-    \resumeSubHeadingListEnd
+% removing awarded funds and committees for now:    
+%%-----------AWARDED FUNDS-----------
+%\section{Awarded Funds}
+%    \resumeSubHeadingListStart
+%      \resumeSubSubheading{San Diego State University Student Success
+%      Fee, Alternate Contact -- \$63,000}{2024-2025}
+%
+%      \resumeSubSubheading{San Diego State University Student Success
+%      Fee, Lead Contact -- \$26,500}{Spring 2024}
+%    \resumeSubHeadingListEnd
+%
+%%-----------COMMITTEES-----------
+%% could remove this one?
+%\section{Committees}
+%    \resumeSubHeadingListStart
+%      \resumeSubSubheading{San Diego State University Student Success
+%      Fee Review Committee}{Spring 2024}
+%    \resumeSubHeadingListEnd
 
 %-----------RESEARCH EXPERIENCE AND OTHER EMPLOYMENT-----------
 \section{Research Experience and Other Employment}
